--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MyApplication</string>
     <string name="welcome">Welcome to Android App Development</string>
+    <string name="deitel_logo">Deiltel\'s bug\'s thumbs up</string>
 </resources>
+
